--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta charset="utf-8" />
     <meta property="og:type" content="article" />
 
-    <meta property="og:description" content="Short description of your project" />
-    <meta property="description" content="Short description of your project" />
+    <meta property="og:description" content="Homework 10" />
+    <meta property="description" content="Homework 10" />
 
     <link rel="stylesheet" href="static/idyll_styles.css" />
   </head>
