--- a/appdata_viz_gmoon4.html
+++ b/appdata_viz_gmoon4.html
@@ -48,6 +48,8 @@
     <p>Below in the link is the source of the primary dataset used, as well as other contextual dataset(s) (i.e. app user reviews), and the dataset's license:</p>    
     <a href='https://www.kaggle.com/lava18/google-play-store-apps?select=googleplaystore.csv'>Kaggle: Google Play Store Apps - Dataset</a>
     <p> </p>
+    <a href='https://github.com/yeonghoon96/gmoon4.github.io'>Click here to see Github notebook code, csv files, and original HTML file.</a>
+    <p> </p>
     <p>Each Bokeh tool icon defined for clarity:</p>
     <ul>
       <li>Bokeh Logo: this brings the user to the Bokeh documentation site</li>
