small fix to png file names for images

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     
     <body>
         <div align=center>
-            <img src='images/play_store1.png' alt=''google_play_store'>
+            <img src='images/play_store1.PNG' alt=''google_play_store'>
             <h1 style="text-align: center;">IS 445 AOG; Author: Garrett Moon</h1><br>
             <h2>2018 Google Play Store App Dataset</h2><br>
             <a href='https://www.kaggle.com/lava18/google-play-store-apps?select=googleplaystore.csv'>Dataset Source:   Kaggle Google Play Store Apps</a><br>
@@ -52,7 +52,7 @@
             Google Play Store looks like from a Desktop. It is important to note how the interface allows a user to search <br>
             an app based on the Category. In the next visualization, we will get a better view of why analyzing categories <br>
             of apps matter as it tells us something about the Android app market for a respective year.</p><br><br>
-            <img src='images/playstore_screenshot.png' alt=''google_play_frontpage'><br>
+            <img src='images/playstore_screenshot.PNG' alt=''google_play_frontpage'><br>
             <a href='https://play.google.com/store/apps'>Click here to explore & view the source of the above screenshot: Google Play (2020)</a><br>
             <br><br><br><br><br><br>
             <h3>Please use this small list below as a reference for how to navigate these plots.<br>
