Small fix to Google Play Store link

--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
                     <li>over-abundance of free apps;</li>
                     <li>certain categories of apps having very low review counts;</li>
                 </u1><br><br><br><br><br><br><br><br><br>
-            <p>To provide context to the first visualization below after this screenshot, here is a reminder of what the <br>
-            Google Play Store looks like from a Desktop. It is important to note how the interface allows a user to search <br>
+            <p>To provide context to the first visualization, here is a reminder --link provided below-- of what the <br>
+            Google Play Store looks like from a desktop. It is important to note how the interface allows a user to search <br>
             an app based on the Category. In the next visualization, we will get a better view of why analyzing categories <br>
-            of apps matter as it tells us something about the Android app market for a respective year.</p><br><br>
+            of apps matter as it tells us something about the Android app market for a respective year.</p><br>
             <img src='images/playstore_screenshot.PNG' alt=''google_play_frontpage'><br>
-            <a href='https://play.google.com/store/apps'>Click here to explore & view the source of the above screenshot: Google Play (2020)</a><br>
+            <a href='https://play.google.com/store/apps'>Click here to explore the current Google Play (2020)</a><br>
             <br><br><br><br><br><br>
             <h3>Please use this small list below as a reference for how to navigate these plots.<br>
                 How to use Bokeh plotting interactivity tools!<br><br>
