small fix to Google Play Store link

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             an app based on the Category. In the next visualization, we will get a better view of why analyzing categories <br>
             of apps matter as it tells us something about the Android app market for a respective year.</p><br>
             <img src='images/playstore_screenshot.PNG' alt=''google_play_frontpage'><br>
-            <a href='https://play.google.com/store/apps'>Click here to explore the scrrenshot source: Google Play (2020)</a><br>
+            <a href='https://play.google.com/store/apps'>Click here to explore the screenshot source: Google Play (2020)</a><br>
             <br><br><br><br><br><br>
             <h3>Please use this small list below as a reference for how to navigate these plots.<br>
                 How to use Bokeh plotting interactivity tools!<br><br>
